Enable low clock speed and print wifi firmware version

--- a/AzureDataSender_FEZ_Feather/packages.config
+++ b/AzureDataSender_FEZ_Feather/packages.config
@@ -8,6 +8,7 @@
   <package id="GHIElectronics.TinyCLR.Devices.Spi" version="2.1.0-preview4" targetFramework="net452" />
   <package id="GHIElectronics.TinyCLR.Devices.Storage" version="2.1.0-preview4" targetFramework="net452" />
   <package id="GHIElectronics.TinyCLR.Devices.Uart" version="2.1.0-preview4" targetFramework="net452" />
+  <package id="GHIElectronics.TinyCLR.Drivers.Microchip.Winc15x0" version="2.1.0-preview4" targetFramework="net452" />
   <package id="GHIElectronics.TinyCLR.IO" version="2.1.0-preview4" targetFramework="net452" />
   <package id="GHIElectronics.TinyCLR.Native" version="2.1.0-preview4" targetFramework="net452" />
   <package id="GHIElectronics.TinyCLR.Networking" version="2.1.0-preview4" targetFramework="net452" />
