--- a/AzureDataSender_FEZ_Feather/AzureDataSender_FEZ_Feather.csproj
+++ b/AzureDataSender_FEZ_Feather/AzureDataSender_FEZ_Feather.csproj
@@ -97,6 +97,9 @@
     <Reference Include="GHIElectronics.TinyCLR.Devices.Uart, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\GHIElectronics.TinyCLR.Devices.Uart.2.1.0-preview4\lib\net452\GHIElectronics.TinyCLR.Devices.Uart.dll</HintPath>
     </Reference>
+    <Reference Include="GHIElectronics.TinyCLR.Drivers.Microchip.Winc15x0, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\GHIElectronics.TinyCLR.Drivers.Microchip.Winc15x0.2.1.0-preview4\lib\net452\GHIElectronics.TinyCLR.Drivers.Microchip.Winc15x0.dll</HintPath>
+    </Reference>
     <Reference Include="GHIElectronics.TinyCLR.IO, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\GHIElectronics.TinyCLR.IO.2.1.0-preview4\lib\net452\GHIElectronics.TinyCLR.IO.dll</HintPath>
     </Reference>
